# docray

./: .dockerignore  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.claude/skills/add-test-fixture/: SKILL.md
.claude/skills/regenerate-goldens/: SKILL.md
.claude/skills/verify-in-playground/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
.superpowers/sdd/: phase0-report.md  phase3h-report.md
book/: book.toml
book/src/: SUMMARY.md  architecture.md  cli.md  configuration.md  deployment.md  docx.md  granularity.md  http-api.md  introduction.md  json-contract.md  limitations.md  output-formats.md  playground.md  pptx.md  quickstart.md
book/theme/: docray.css  docray.js
crates/docray-cli/: Cargo.toml
crates/docray-cli/src/: main.rs
crates/docray-cli/tests/: cli.rs  malformed.rs
crates/docray-core/: Cargo.toml
crates/docray-core/src/: error.rs  grouping.rs  lib.rs  sniff.rs
crates/docray-core/tests/: grouping.rs  sniff.rs
crates/docray-docx/: Cargo.toml
crates/docray-docx/examples/: gen_fixtures.rs
crates/docray-docx/src/: extract.rs  lib.rs  numbering.rs  styles.rs
crates/docray-docx/tests/: golden.rs  security.rs
crates/docray-model/: Cargo.toml
crates/docray-model/src/: flow.rs  lib.rs
crates/docray-model/tests/: flow.rs  lean.rs  schema.rs
crates/docray-ooxml/: Cargo.toml
crates/docray-ooxml/src/: lib.rs  package.rs  relationships.rs  theme.rs  xml.rs
crates/docray-pdf/: Cargo.toml
crates/docray-pdf/examples/: gen_fixtures.rs  wasm_spike_bench.rs
crates/docray-pdf/src/: bind.rs  coords.rs  extract.rs  lib.rs
crates/docray-pdf/tests/: forms.rs  golden.rs  objects.rs  open.rs  scanned.rs  text.rs
crates/docray-pptx/: Cargo.toml
crates/docray-pptx/examples/: gen_fixtures.rs
crates/docray-pptx/src/: extract.rs  lib.rs  package.rs  xml.rs
crates/docray-pptx/tests/: golden.rs  security.rs
crates/docray-server/: Cargo.toml
crates/docray-server/assets/: playground.html
crates/docray-server/src/: config.rs  http.rs  jobs.rs  main.rs  worker.rs
crates/docray-server/tests/: jobs_api.rs  sync_api.rs
crates/docray-wasm/: Cargo.toml
crates/docray-wasm/src/: lib.rs
deploy/: ecs-task-def.example.json
scripts/: build-try.sh  build-wasm.sh  fetch-pdfium.sh  wasm-parity.cjs
spike/: bench-wasm.cjs  compare.cjs  run-wasm.cjs
testdata/docx/: body-pagination.docx  breaks.docx  field-code-break.docx  fields.docx  hyperlinks.docx  images.docx  macro.docm  mc.docx  numbering.docx  revisions-comments.docx  roles.docx  rtl.docx  run-merge.docx  sections.docx  stories.docx  styles.docx  tables.docx  wrappers.docx  zero-hints.docx
testdata/golden/: form.json  image.json  link.json  rotated.json  scan.json  simple.element.json  simple.element.lean.txt  simple.json  simple.word.json  simple.word.lean.txt
testdata/golden/docx/: body-pagination.element.json  body-pagination.lean.txt  breaks.element.json  breaks.lean.txt  field-code-break.element.json  field-code-break.lean.txt  fields.element.json  fields.lean.txt  hyperlinks.element.json  hyperlinks.lean.txt  images.element.json  images.lean.txt  macro.element.json  macro.lean.txt  mc.element.json  mc.lean.txt  numbering.element.json  numbering.lean.txt  revisions-comments.element.json  revisions-comments.lean.txt  roles.element.json  roles.lean.txt  rtl.element.json  rtl.lean.txt  run-merge.element.json  run-merge.lean.txt  sections.element.json  sections.lean.txt  stories.element.json  stories.lean.txt  styles.element.json  styles.lean.txt  tables.element.json  tables.lean.txt  wrappers.element.json  wrappers.lean.txt  zero-hints.element.json  zero-hints.lean.txt
testdata/golden/pptx/: alternate-content.element.json  (+39 more)
testdata/malformed/: docx-bad-image-target.docx  docx-corrupt-optional-parts.docx  docx-field-nesting.docx  docx-hinted-block-cap.docx  docx-huge-story.docx  docx-mc-bomb.docx  docx-numbering-cycle.docx  docx-style-cycle.docx  escaping-picture.pptx  external-entity.pptx  legacy-office.cfb  path-traversal.pptx  truncated.pptx  xxe.pptx  zip-bomb.pptx
testdata/playground/: emf.docx  emf.pptx
testdata/pptx/: alternate-content.pptx  autoheight-table.pptx  basic.pptx  chart.pptx  graphic-picture.pptx  groups.pptx  hidden-context.pptx  hidden-shapes.pptx  hyperlink.pptx  inherited-shapes.pptx  layout-hides-master-shapes.pptx  missing-chart.pptx  paths.pptx  percent-chart.pptx  picture.pptx  placeholders.pptx  slide-hides-template-shapes.pptx  smartart.pptx  styled-text.pptx  table.pptx
web/: worker.js
