[package]
name = "docray-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "docray"
path = "src/main.rs"

[dependencies]
docray-model = { path = "../docray-model" }
docray-core = { path = "../docray-core" }
docray-pdf = { path = "../docray-pdf" }
docray-pptx = { path = "../docray-pptx" }
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
