[package]
name = "docray-docx"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
docray-model = { path = "../docray-model" }
docray-core = { path = "../docray-core" }
docray-ooxml = { path = "../docray-ooxml" }
sha2 = "0.11"

[dev-dependencies]
serde_json.workspace = true
zip = { version = "=2.4.2", default-features = false, features = ["deflate"] }
