[package]
name = "docray-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
docray-model = { path = "../docray-model" }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde.workspace = true
serde_json.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
libc = "0.2"
num_cpus = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["multipart", "json", "blocking"] }
