[package]
name = "docray-wasm"
edition.workspace = true
license.workspace = true
version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
docray-core = { path = "../docray-core" }
docray-model = { path = "../docray-model" }
docray-pdf = { path = "../docray-pdf" }
serde_json.workspace = true
wasm-bindgen = "0.2"
