[package]
name = "docray-wasm"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
docray-core = { path = "../docray-core" }
docray-docx = { path = "../docray-docx" }
docray-model = { path = "../docray-model" }
docray-ooxml = { path = "../docray-ooxml" }
docray-pdf = { path = "../docray-pdf" }
docray-pptx = { path = "../docray-pptx" }
serde.workspace = true
serde_json.workspace = true
wasm-bindgen = "0.2"
